Gadypadie-Spilt-main-2/infra/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gpsplit
spec:
  selector: { matchLabels: { app: frontend } }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: gadypadie-spilt-frontend:latest
          imagePullPolicy: IfNotPresent

          ports: [ {containerPort: 8081} ]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: gpsplit
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 8081
      name: http
  type: ClusterIP
