Gadypadie-Spilt-main-2/infra/k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: gpsplit
spec:
  selector:
    matchLabels: { app: mysql }
  template:
    metadata:
      labels: { app: mysql }
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports: [ {containerPort: 3306} ]
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: gpsplit
spec:
  selector: { app: mysql }
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  type: ClusterIP
